helm/opensearch/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opensearch-ingress
  namespace: opensearch
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: opensearch.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: opensearch-cluster-master
            port:
              number: 9200
